--- a/index.html
+++ b/index.html
@@ -1,172 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>What's New Feed</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Activity Feed</title>
+
+<!-- Silkscreen font -->
+<link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-  /* More reliable than <link> in some cases */
-  @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
-
-  :root{
-    --card: #cfcfcf;
-    --text: #000;
-    --line: rgba(0,0,0,0.25);
-    --border: rgba(0,0,0,0.10);
-  }
-
-  html, body{
-    margin:0;
-    padding:0;
-    background: transparent;
-    color: var(--text);
-    font-family: "Silkscreen", monospace !important;
-  }
-
-  /* Force font on everything inside */
-  *, *::before, *::after{
-    font-family: "Silkscreen", monospace !important;
-    box-sizing: border-box;
-  }
-
-  .feed{
-    display:flex;
-    flex-direction:column;
-    gap:14px;
-  }
-
-  .card{
-    display:block;
-    background: var(--card);
-    border-radius:18px;
-    padding:14px 16px;
-    text-decoration:none;
-    color:inherit;
-    border:1px solid var(--border);
-  }
-
-  .top{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    font-size:13px;
-    font-weight:700;
-    padding-bottom:8px;
-    border-bottom:2px solid var(--line);
-    margin-bottom:8px;
-  }
-
-  .time{
-    font-size:12px;
-    font-weight:700;
-    opacity: 0.9;
-  }
-
-  .time.live{
-    padding:4px 8px;
-    border-radius:999px;
-    border:1px solid rgba(0,0,0,0.18);
-    background: rgba(255,255,255,0.20);
-    letter-spacing: 0.6px;
-  }
-
-  .text{
-    font-size:13px;
-    line-height:1.45;
-  }
+body {
+  margin: 0;
+  font-family: 'Silkscreen', monospace;
+  font-weight: normal;
+  background: #CCCCCC; /* Background hex from buyer */
+  color: #747474; /* Text hex from buyer */
+}
+.feed {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  padding: 10px;
+}
+.card {
+  display: block;
+  background: #CCCCCC; /* Card same as background */
+  border-radius: 18px;
+  padding: 14px 16px;
+  text-decoration: none;
+  color: inherit;
+  border: 1px solid #747474; /* Line color from buyer */
+}
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 13px;
+  font-weight: normal; /* regular */
+  padding-bottom: 8px;
+  border-bottom: 1px solid #747474; /* Line color */
+  margin-bottom: 8px;
+}
+.time {
+  font-size: 12px;
+  font-weight: normal;
+}
+.time.live {
+  padding: 4px 8px;
+  border-radius: 999px;
+  border: 1px solid #747474;
+  background: rgba(255,255,255,0.2);
+}
+.text {
+  font-size: 13px;
+  line-height: 1.45;
+  color: #fff; /* Optional: main text white for contrast */
+}
 </style>
 </head>
-
 <body>
-<div class="feed">
 
-  <!-- Twitch (auto LIVE / Offline) -->
-  <a class="card" href="https://www.twitch.tv/eiaska" target="_blank" rel="noopener">
-    <div class="top">
-      <div>🎮 Twitch</div>
-      <div class="time" id="twitchTime">…</div>
-    </div>
-    <div class="text" id="twitchText">Checking Twitch status…</div>
-  </a>
-
-  <!-- YouTube (manual for now) -->
-  <a class="card" href="https://www.youtube.com/@eIaska" target="_blank" rel="noopener">
-    <div class="top">
-      <div>▶️ YouTube</div>
-      <div class="time">7d</div>
-    </div>
-    <div class="text">Elaska uploaded a new vlog 🍁</div>
-  </a>
-
-  <!-- Instagram (manual for now) -->
-  <a class="card" href="https://www.instagram.com/kitsudare/" target="_blank" rel="noopener">
-    <div class="top">
-      <div>📸 Instagram</div>
-      <div class="time">7d</div>
-    </div>
-    <div class="text">Elaska posted on Instagram</div>
-  </a>
-
-  <!-- X (manual for now) -->
-  <a class="card" href="https://x.com/elaska" target="_blank" rel="noopener">
-    <div class="top">
-      <div>𝕏 X</div>
-      <div class="time">7d</div>
-    </div>
-    <div class="text">Elaska posted on X</div>
-  </a>
-
-  <!-- Fansly (manual for now) -->
-  <a class="card" href="https://fansly.com/elaska" target="_blank" rel="noopener">
-    <div class="top">
-      <div>⭐ Fansly</div>
-      <div class="time">22d</div>
-    </div>
-    <div class="text">Elaska posted on Fansly</div>
-  </a>
-
-</div>
+<div class="feed" id="feedContainer"></div>
 
 <script>
-  async function checkTwitch(){
-    const timeEl = document.getElementById("twitchTime");
-    const textEl = document.getElementById("twitchText");
+// --- SETTINGS ---
+const SHEET_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSJdZ2ZZIRkU-Ukws8BGBs-E543ILEsysG-fzrTZlnTtvt6eoo9Mn4wfcBUaCVzsCIpkM9AjJaF8Lzw/pub?output=csv"; // Google Sheet published as CSV
+const TWITCH_USERNAME = "elaska"; // Twitch username for LIVE check
 
-    try{
-      const res = await fetch("https://decapi.me/twitch/uptime/elaska", { cache: "no-store" });
-      const t = (await res.text()).trim().toLowerCase();
+// --- FUNCTIONS ---
 
-      if(t.includes("offline")){
-        timeEl.classList.remove("live");
-        timeEl.textContent = "Offline";
-        textEl.textContent = "Elaska is currently offline on Twitch";
-      } else {
-        timeEl.classList.add("live");
-        timeEl.textContent = "LIVE";
-        textEl.textContent = "Elaska was live on Twitch streaming Fitness & Health";
-      }
-    } catch(e){
-      timeEl.classList.remove("live");
-      timeEl.textContent = "";
-      textEl.textContent = "Unable to check Twitch status right now";
+// Fetch Google Sheet data
+async function fetchSheetData() {
+  const res = await fetch(SHEET_CSV_URL);
+  const text = await res.text();
+  const rows = text.trim().split('\n');
+  const headers = rows[0].split(',');
+  const items = rows.slice(1).map(row => {
+    const cols = row.split(',');
+    return {
+      platform: cols[0],
+      text: cols[1],
+      label: cols[2],
+      url: cols[3]
+    };
+  });
+  return items;
+}
+
+// Fetch Twitch LIVE status
+async function checkTwitchStatus() {
+  try {
+    const res = await fetch(`https://decapi.me/twitch/uptime/${TWITCH_USERNAME}`, { cache: "no-store" });
+    const status = (await res.text()).trim().toLowerCase();
+    if (status.includes("offline")) {
+      return { label: "Offline", text: "Elaska is currently offline on Twitch" };
+    } else {
+      return { label: "LIVE", text: "Elaska is live on Twitch streaming!" };
     }
-
-    sendHeight();
+  } catch (e) {
+    return { label: "", text: "Unable to fetch Twitch status" };
   }
+}
 
-  function sendHeight(){
-    parent.postMessage(
-      { type: "feedHeight", height: document.documentElement.scrollHeight },
-      "*"
-    );
-  }
+// Render the feed
+async function renderFeed() {
+  const container = document.getElementById("feedContainer");
+  container.innerHTML = "";
 
-  window.addEventListener("load", () => { checkTwitch(); sendHeight(); });
-  window.addEventListener("resize", sendHeight);
+  const sheetItems = await fetchSheetData();
+  const twitchStatus = await checkTwitchStatus();
 
-  setInterval(checkTwitch, 60000);
-  setInterval(sendHeight, 1500);
+  // Add Twitch at top
+  const twitchItem = {
+    platform: "Twitch",
+    text: twitchStatus.text,
+    label: twitchStatus.label,
+    url: `https://www.twitch.tv/${TWITCH_USERNAME}`
+  };
+
+  const allItems = [twitchItem, ...sheetItems];
+
+  // Sort newest first (Twitch on top, then newest 'NOW' labels first)
+  allItems.sort((a, b) => {
+    if (a.label === "NOW") return -1;
+    if (b.label === "NOW") return 1;
+    return 0;
+  });
+
+  allItems.forEach(item => {
+    const card = document.createElement("a");
+    card.href = item.url;
+    card.target = "_blank";
+    card.className = "card";
+    card.innerHTML = `
+      <div class="top">
+        <div>${item.platform}</div>
+        <div class="time ${item.label === "LIVE" ? "live" : ""}">${item.label || ""}</div>
+      </div>
+      <div class="text">${item.text}</div>
+    `;
+    container.appendChild(card);
+  });
+}
+
+// Initial render + refresh every 60 seconds
+renderFeed();
+setInterval(renderFeed, 60000);
+
 </script>
 </body>
 </html>
