--- a/index.html
+++ b/index.html
@@ -5,57 +5,45 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Activity Feed</title>
 
-<!-- Silkscreen font -->
-<link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
-
 <style>
-body {
-  margin: 0;
-  font-family: 'Silkscreen', monospace;
-  font-weight: normal;
-  background: #CCCCCC; /* Background hex from buyer */
-  color: #747474; /* Text hex from buyer */
-}
-.feed {
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
-  padding: 10px;
-}
-.card {
-  display: block;
-  background: #CCCCCC; /* Card same as background */
-  border-radius: 18px;
-  padding: 14px 16px;
-  text-decoration: none;
-  color: inherit;
-  border: 1px solid #747474; /* Line color from buyer */
-}
-.top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 13px;
-  font-weight: normal; /* regular */
-  padding-bottom: 8px;
-  border-bottom: 1px solid #747474; /* Line color */
-  margin-bottom: 8px;
-}
-.time {
-  font-size: 12px;
-  font-weight: normal;
-}
-.time.live {
-  padding: 4px 8px;
-  border-radius: 999px;
-  border: 1px solid #747474;
-  background: rgba(255,255,255,0.2);
-}
-.text {
-  font-size: 13px;
-  line-height: 1.45;
-  color: #fff; /* optional: main text white for contrast */
-}
+  body {
+    margin: 0;
+    font-family: 'Silkscreen', monospace;
+    background: #CCCCCC;
+    color: #747474;
+  }
+  .feed {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+  }
+  .card {
+    display: block;
+    background: #CCCCCC;
+    border-radius: 18px;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: inherit;
+    border: 1px solid #747474;
+  }
+  .top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 13px;
+    font-weight: 400;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #747474;
+    margin-bottom: 8px;
+  }
+  .time {
+    font-size: 12px;
+    font-weight: 400;
+  }
+  .text {
+    font-size: 13px;
+    line-height: 1.45;
+  }
 </style>
 </head>
 <body>
@@ -63,91 +51,80 @@ body {
 <div class="feed" id="feedContainer"></div>
 
 <script>
-// --- SETTINGS ---
-const SHEET_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSJdZ2ZZIRkU-Ukws8BGBs-E543ILEsysG-fzrTZlnTtvt6eoo9Mn4wfcBUaCVzsCIpkM9AjJaF8Lzw/pub?output=csv"; // Google Sheet CSV
-const TWITCH_USERNAME = "elaska"; // Twitch username
+const sheetUrl = 'PASTE_YOUR_PUBLISHED_CSV_URL_HERE'; // replace with Google Sheet CSV link
 
-// --- FUNCTIONS ---
-
-// Fetch Google Sheet data
-async function fetchSheetData() {
-  const res = await fetch(SHEET_CSV_URL);
-  const text = await res.text();
-  const rows = text.trim().split('\n');
-  const headers = rows[0].split(',');
-  // map rows into objects and **ignore Twitch rows**
-  const items = rows.slice(1).map(r=>{
-    const cols = r.split(',');
-    return {
-      platform: cols[0],
-      text: cols[1],
-      label: cols[2],
-      url: cols[3]
-    };
-  }).filter(item => item.platform.toLowerCase() !== "twitch"); // <- ignore Twitch
-  return items;
+function timeSince(dateStr) {
+  if (!dateStr) return 'NOW';
+  const now = new Date();
+  const past = new Date(dateStr);
+  const diff = now - past; // milliseconds
+  const seconds = Math.floor(diff / 1000);
+  if (seconds < 60) return 'NOW';
+  const minutes = Math.floor(seconds / 60);
+  if (minutes < 60) return minutes + 'm';
+  const hours = Math.floor(minutes / 60);
+  if (hours < 24) return hours + 'h';
+  const days = Math.floor(hours / 24);
+  return days + 'd';
 }
 
-// Fetch Twitch LIVE status
-async function checkTwitchStatus() {
+async function loadFeed() {
   try {
-    const res = await fetch(`https://decapi.me/twitch/uptime/${TWITCH_USERNAME}`, { cache: "no-store" });
-    const status = (await res.text()).trim().toLowerCase();
-    if (status.includes("offline")) {
-      return { label: "Offline", text: "Elaska is currently offline on Twitch" };
-    } else {
-      return { label: "LIVE", text: "Elaska is live on Twitch streaming!" };
-    }
-  } catch (e) {
-    return { label: "", text: "Unable to fetch Twitch status" };
+    const res = await fetch(sheetUrl);
+    const text = await res.text();
+    const rows = text.trim().split('\n');
+    const headers = rows[0].split(',');
+    let items = rows.slice(1).map(r => {
+      const cols = r.split(',');
+      return {
+        platform: cols[0],
+        text: cols[1],
+        label: cols[2],
+        url: cols[3],
+        timestamp: cols[4] || null
+      };
+    });
+
+    // Sort newest first based on timestamp
+    items.sort((a, b) => {
+      if (a.timestamp && b.timestamp) {
+        return new Date(b.timestamp) - new Date(a.timestamp);
+      } else return 0;
+    });
+
+    const container = document.getElementById('feedContainer');
+    container.innerHTML = '';
+
+    items.forEach(item => {
+      const card = document.createElement('a');
+      card.href = item.url;
+      card.target = '_blank';
+      card.className = 'card';
+
+      // Twitch LIVE check
+      const timeLabel = item.platform.toLowerCase() === 'twitch'
+        ? (item.text.toLowerCase().includes('live') ? 'LIVE' : 'Offline')
+        : timeSince(item.timestamp);
+
+      card.innerHTML = `
+        <div class="top">
+          <div>${item.platform}</div>
+          <div class="time">${timeLabel}</div>
+        </div>
+        <div class="text">${item.text}</div>
+      `;
+      container.appendChild(card);
+    });
+  } catch(e) {
+    console.error('Error loading feed:', e);
   }
 }
 
-// Render the feed
-async function renderFeed() {
-  const container = document.getElementById("feedContainer");
-  container.innerHTML = "";
-
-  const sheetItems = await fetchSheetData();
-  const twitchStatus = await checkTwitchStatus();
-
-  // Twitch card always on top
-  const twitchItem = {
-    platform: "Twitch",
-    text: twitchStatus.text,
-    label: twitchStatus.label,
-    url: `https://www.twitch.tv/${TWITCH_USERNAME}`
-  };
-
-  const allItems = [twitchItem, ...sheetItems];
-
-  // Sort newest activity first: label="NOW" moves to top
-  allItems.sort((a, b) => {
-    if (a.label === "NOW") return -1;
-    if (b.label === "NOW") return 1;
-    return 0;
-  });
-
-  allItems.forEach(item => {
-    const card = document.createElement("a");
-    card.href = item.url;
-    card.target = "_blank";
-    card.className = "card";
-    card.innerHTML = `
-      <div class="top">
-        <div>${item.platform}</div>
-        <div class="time ${item.label === "LIVE" ? "live" : ""}">${item.label || ""}</div>
-      </div>
-      <div class="text">${item.text}</div>
-    `;
-    container.appendChild(card);
-  });
-}
-
-// Initial render + refresh every 60s
-renderFeed();
-setInterval(renderFeed, 60000);
-
+// Initial load
+loadFeed();
+// Refresh every 60 seconds
+setInterval(loadFeed, 60000);
 </script>
+
 </body>
 </html>
