--- a/index.html
+++ b/index.html
@@ -6,44 +6,44 @@
 <title>Activity Feed</title>
 
 <style>
-  body {
-    margin: 0;
-    font-family: 'Silkscreen', monospace;
-    background: #CCCCCC;
-    color: #747474;
-  }
-  .feed {
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
-  }
-  .card {
-    display: block;
-    background: #CCCCCC;
-    border-radius: 18px;
-    padding: 14px 16px;
-    text-decoration: none;
-    color: inherit;
-    border: 1px solid #747474;
-  }
-  .top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 13px;
-    font-weight: 400;
-    padding-bottom: 8px;
-    border-bottom: 1px solid #747474;
-    margin-bottom: 8px;
-  }
-  .time {
-    font-size: 12px;
-    font-weight: 400;
-  }
-  .text {
-    font-size: 13px;
-    line-height: 1.45;
-  }
+body {
+  margin: 0;
+  font-family: 'Silkscreen', monospace;
+  background: #CCCCCC;
+  color: #747474;
+}
+.feed {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+.card {
+  display: block;
+  background: #CCCCCC;
+  border-radius: 18px;
+  padding: 14px 16px;
+  text-decoration: none;
+  color: inherit;
+  border: 1px solid #747474;
+}
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 13px;
+  font-weight: 400;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #747474;
+  margin-bottom: 8px;
+}
+.time {
+  font-size: 12px;
+  font-weight: 400;
+}
+.text {
+  font-size: 13px;
+  line-height: 1.45;
+}
 </style>
 </head>
 <body>
@@ -51,13 +51,14 @@
 <div class="feed" id="feedContainer"></div>
 
 <script>
-const sheetUrl = 'PASTE_YOUR_PUBLISHED_CSV_URL_HERE'; // replace with Google Sheet CSV link
+const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSJdZ2ZZIRkU-Ukws8BGBs-E543ILEsysG-fzrTZlnTtvt6eoo9Mn4wfcBUaCVzsCIpkM9AjJaF8Lzw/pub?output=csv';
 
+// Function to calculate time since update
 function timeSince(dateStr) {
   if (!dateStr) return 'NOW';
   const now = new Date();
   const past = new Date(dateStr);
-  const diff = now - past; // milliseconds
+  const diff = now - past;
   const seconds = Math.floor(diff / 1000);
   if (seconds < 60) return 'NOW';
   const minutes = Math.floor(seconds / 60);
@@ -68,28 +69,37 @@ function timeSince(dateStr) {
   return days + 'd';
 }
 
+// Robust CSV parser to handle commas in quotes
+function parseCSV(text) {
+  const lines = text.trim().split('\n');
+  const items = [];
+  for (let i = 1; i < lines.length; i++) {
+    const row = lines[i];
+    // Regex handles quoted commas
+    const cols = row.match(/(".*?"|[^",\s]+)(?=\s*,|\s*$)/g);
+    if (!cols) continue;
+    items.push({
+      platform: cols[0]?.replace(/"/g,'') || '',
+      text: cols[1]?.replace(/"/g,'') || '',
+      label: cols[2]?.replace(/"/g,'') || '',
+      url: cols[3]?.replace(/"/g,'') || '',
+      timestamp: cols[4]?.replace(/"/g,'') || ''
+    });
+  }
+  return items;
+}
+
+// Load feed
 async function loadFeed() {
   try {
     const res = await fetch(sheetUrl);
     const text = await res.text();
-    const rows = text.trim().split('\n');
-    const headers = rows[0].split(',');
-    let items = rows.slice(1).map(r => {
-      const cols = r.split(',');
-      return {
-        platform: cols[0],
-        text: cols[1],
-        label: cols[2],
-        url: cols[3],
-        timestamp: cols[4] || null
-      };
-    });
+    let items = parseCSV(text);
 
-    // Sort newest first based on timestamp
+    // Sort newest first by timestamp
     items.sort((a, b) => {
-      if (a.timestamp && b.timestamp) {
-        return new Date(b.timestamp) - new Date(a.timestamp);
-      } else return 0;
+      if(a.timestamp && b.timestamp) return new Date(b.timestamp) - new Date(a.timestamp);
+      return 0;
     });
 
     const container = document.getElementById('feedContainer');
@@ -101,7 +111,7 @@ async function loadFeed() {
       card.target = '_blank';
       card.className = 'card';
 
-      // Twitch LIVE check
+      // Twitch LIVE / Offline
       const timeLabel = item.platform.toLowerCase() === 'twitch'
         ? (item.text.toLowerCase().includes('live') ? 'LIVE' : 'Offline')
         : timeSince(item.timestamp);
@@ -115,6 +125,7 @@ async function loadFeed() {
       `;
       container.appendChild(card);
     });
+
   } catch(e) {
     console.error('Error loading feed:', e);
   }
@@ -124,6 +135,7 @@ async function loadFeed() {
 loadFeed();
 // Refresh every 60 seconds
 setInterval(loadFeed, 60000);
+
 </script>
 
 </body>
