--- a/index.html
+++ b/index.html
@@ -6,44 +6,44 @@
 <title>Activity Feed</title>
 
 <style>
-body {
-  margin: 0;
-  font-family: 'Silkscreen', monospace;
-  background: #CCCCCC;
-  color: #747474;
-}
-.feed {
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
-}
-.card {
-  display: block;
-  background: #CCCCCC;
-  border-radius: 18px;
-  padding: 14px 16px;
-  text-decoration: none;
-  color: inherit;
-  border: 1px solid #747474;
-}
-.top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 13px;
-  font-weight: 400;
-  padding-bottom: 8px;
-  border-bottom: 1px solid #747474;
-  margin-bottom: 8px;
-}
-.time {
-  font-size: 12px;
-  font-weight: 400;
-}
-.text {
-  font-size: 13px;
-  line-height: 1.45;
-}
+  body {
+    margin: 0;
+    font-family: 'Silkscreen', monospace;
+    background: #CCCCCC;
+    color: #747474;
+  }
+  .feed {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+  }
+  .card {
+    display: block;
+    background: #CCCCCC;
+    border-radius: 18px;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: inherit;
+    border: 1px solid #747474;
+  }
+  .top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 13px;
+    font-weight: 400;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #747474;
+    margin-bottom: 8px;
+  }
+  .time {
+    font-size: 12px;
+    font-weight: 400;
+  }
+  .text {
+    font-size: 13px;
+    line-height: 1.45;
+  }
 </style>
 </head>
 <body>
@@ -53,30 +53,15 @@ body {
 <script>
 const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSJdZ2ZZIRkU-Ukws8BGBs-E543ILEsysG-fzrTZlnTtvt6eoo9Mn4wfcBUaCVzsCIpkM9AjJaF8Lzw/pub?output=csv';
 
-// Function to calculate time since update
-function timeSince(dateStr) {
-  if (!dateStr) return 'NOW';
-  const now = new Date();
-  const past = new Date(dateStr);
-  const diff = now - past;
-  const seconds = Math.floor(diff / 1000);
-  if (seconds < 60) return 'NOW';
-  const minutes = Math.floor(seconds / 60);
-  if (minutes < 60) return minutes + 'm';
-  const hours = Math.floor(minutes / 60);
-  if (hours < 24) return hours + 'h';
-  const days = Math.floor(hours / 24);
-  return days + 'd';
-}
-
-// Robust CSV parser to handle commas in quotes
+// robust CSV parser to handle commas in text
 function parseCSV(text) {
   const lines = text.trim().split('\n');
+  const headers = lines[0].split(',');
   const items = [];
   for (let i = 1; i < lines.length; i++) {
-    const row = lines[i];
-    // Regex handles quoted commas
-    const cols = row.match(/(".*?"|[^",\s]+)(?=\s*,|\s*$)/g);
+    let row = lines[i];
+    // handle quoted commas
+    let cols = row.match(/(".*?"|[^",\s]+)(?=\s*,|\s*$)/g);
     if (!cols) continue;
     items.push({
       platform: cols[0]?.replace(/"/g,'') || '',
@@ -89,17 +74,34 @@ function parseCSV(text) {
   return items;
 }
 
-// Load feed
+// calculate time since timestamp
+function timeSince(dateStr) {
+  if (!dateStr) return 'NOW';
+  const now = new Date();
+  const past = new Date(dateStr);
+  const diff = now - past; // milliseconds
+  const seconds = Math.floor(diff / 1000);
+  if (seconds < 60) return 'NOW';
+  const minutes = Math.floor(seconds / 60);
+  if (minutes < 60) return minutes + 'm';
+  const hours = Math.floor(minutes / 60);
+  if (hours < 24) return hours + 'h';
+  const days = Math.floor(hours / 24);
+  return days + 'd';
+}
+
+// fetch and render feed
 async function loadFeed() {
   try {
     const res = await fetch(sheetUrl);
     const text = await res.text();
     let items = parseCSV(text);
 
-    // Sort newest first by timestamp
+    // sort newest first based on timestamp
     items.sort((a, b) => {
-      if(a.timestamp && b.timestamp) return new Date(b.timestamp) - new Date(a.timestamp);
-      return 0;
+      if (a.timestamp && b.timestamp) {
+        return new Date(b.timestamp) - new Date(a.timestamp);
+      } else return 0;
     });
 
     const container = document.getElementById('feedContainer');
@@ -111,7 +113,7 @@ async function loadFeed() {
       card.target = '_blank';
       card.className = 'card';
 
-      // Twitch LIVE / Offline
+      // Twitch LIVE check
       const timeLabel = item.platform.toLowerCase() === 'twitch'
         ? (item.text.toLowerCase().includes('live') ? 'LIVE' : 'Offline')
         : timeSince(item.timestamp);
@@ -125,17 +127,15 @@ async function loadFeed() {
       `;
       container.appendChild(card);
     });
-
   } catch(e) {
     console.error('Error loading feed:', e);
   }
 }
 
-// Initial load
+// initial load
 loadFeed();
-// Refresh every 60 seconds
+// refresh every 60 seconds
 setInterval(loadFeed, 60000);
-
 </script>
 
 </body>
