--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSJdZ2ZZIRkU-Ukws8BGBs-E543ILEsysG-fzrTZlnTtvt6eoo9Mn4wfcBUaCVzsCIpkM9AjJaF8Lzw/pub?output=csv';
 
   // ✅ Twitch username to check LIVE status
-  const twitchUsername = 'elaska';
+  const twitchUsername = 'eiaska';
 
   // ---------- Robust CSV parsing ----------
   function parseCSV(text) {
